--- a/src/app/form-demo/form-demo.component.html
+++ b/src/app/form-demo/form-demo.component.html
@@ -1,24 +1,18 @@
 <div class="row">
-    <form class="col s12">
+    <form #myForm="ngForm" (ngSubmit) = "submitForm(myForm)" class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <input  [(ngModel)] = "submissions.firstName" placeholder="Placeholder" id="first_name" name="first_name" type="text" class="validate">
           <label for="first_name">First Name</label>
         </div>
         <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
+          <input [(ngModel)] = "submissions.lastName" id="last_name" name="last_name" type="text" class="validate">
           <label for="last_name">Last Name</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
+          <input  [(ngModel)] = "submissions.email" id="email" name="email" type="email" class="validate">
           <label for="email">Email</label>
         </div>
       </div>
